unpackaged/main/default/objects/d_wh__Initiate_Callout__e/d_wh__Initiate_Callout__e.object-meta.xml
<CustomObject>
    <label>Initiate Callout</label>
    <pluralLabel>Initiate Callouts</pluralLabel>
</CustomObject>