unpackaged/main/default/objects/d_wh__Initiate_Callout__e/fields/d_wh__Parameters__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Parameters__c</fullName>
    <label>Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>