unpackaged/main/default/objects/d_wh__Initiate_Callout__e/fields/d_wh__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>