unpackaged/main/default/objects/d_wh__Initiate_Callout__e/fields/d_wh__Template_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Template_Developer_Name__c</fullName>
    <label>Template Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>