unpackaged/main/default/objects/d_wh__Initiate_Callout__e/fields/d_wh__Type__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>